--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Страница достижений</title>
     <link rel="stylesheet" href="styles.css">
+    <title>Achievements Page</title>
 </head>
+
 <body>
     <div class="container">
-        <h1>Достижения</h1>
-        
+        <h1>Achievements</h1>
         <div id="achievementsContainer"></div>
     </div>
 
     <script src="script.js"></script>
 </body>
+
 </html>
