--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="container">
-        <h1>Achievements</h1>
+        <h1>Ачивки 226 группы. АКОС.</h1>
         <div id="achievementsContainer"></div>
     </div>
 
